# fr3_control

./: README.md
catkin_ws/devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
catkin_ws/devel/lib/franka_control/: franka_combined_control_node  franka_control_node
catkin_ws/devel/lib/franka_example_controllers/: interactive_marker.py  move_to_start.py  teleop_gripper_node
catkin_ws/devel/lib/franka_gripper/: franka_gripper_node
catkin_ws/devel/lib/franka_simulation/: franka_control.py
catkin_ws/devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
catkin_ws/devel/lib/pkgconfig/: fr3_moveit_config.pc  franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_simulation.pc  franka_visualization.pc  xacro_receiver.pc  xacro_transmission.pc
catkin_ws/devel/lib/xacro_receiver/: xacro_receiver.py
catkin_ws/devel/share/fr3_moveit_config/cmake/: fr3_moveit_configConfig.cmake
catkin_ws/devel/share/franka_control/cmake/: franka_controlConfig.cmake
catkin_ws/devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
catkin_ws/devel/share/franka_example_controllers/cmake/: franka_example_controllers-msg-paths.cmake  franka_example_controllersConfig.cmake
catkin_ws/devel/share/franka_gazebo/cmake/: franka_gazeboConfig.cmake
catkin_ws/devel/share/franka_gripper/cmake/: franka_gripper-msg-extras.cmake  franka_gripper-msg-paths.cmake  franka_gripperConfig.cmake
catkin_ws/devel/share/franka_hw/cmake/: franka_hwConfig.cmake
catkin_ws/devel/share/franka_msgs/cmake/: franka_msgs-msg-paths.cmake  franka_msgsConfig.cmake
catkin_ws/devel/share/franka_simulation/cmake/: franka_simulationConfig.cmake
catkin_ws/devel/share/franka_visualization/cmake/: franka_visualizationConfig.cmake
catkin_ws/devel/share/xacro_receiver/cmake/: xacro_receiverConfig.cmake
catkin_ws/devel/share/xacro_transmission/cmake/: xacro_transmissionConfig.cmake
catkin_ws/src/: code.txt
catkin_ws/src/fr3_moveit_config/: .setup_assistant  package.xml
catkin_ws/src/fr3_moveit_config/config/: fake_controllers.yaml  fr3.srdf  gazebo_fr3.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
catkin_ws/src/fr3_moveit_config/launch/: demo.launch  gazebo.launch  planning_context.launch
catkin_ws/src/fr3_moveit_config/scripts/: move_fr3.py
catkin_ws/src/franka_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/franka_simulation/launch/: display.launch  fr3_simulation.launch  simulation.launch
catkin_ws/src/franka_simulation/rviz/: fr3_description_with_maker.rviz
catkin_ws/src/franka_simulation/src/: control_fr3_cartesian.py  fr3.py  franka_control.py  move_fr3.py  remote_control.py
catkin_ws/src/web_project/: index.html
catkin_ws/src/web_project/css/: style.css
catkin_ws/src/xacro_receiver/: CMakeLists.txt
catkin_ws/src/xacro_transmission/src/: xacro_publisher.py
catkin_ws/src/xacro_transmission/xacro/: simple_robot.urdf.xacro
jack_ws/: txt.txt
jack_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
jack_ws/devel/lib/pkgconfig/: panda_moveit_config.pc  xacro_transmission.pc
jack_ws/src/xacro_transmission/: CMakeLists.txt  package.xml
(+10 files in other folders)
