<?xml version="1.0"?>
<package format="2">
  <name>franka_simulation</name>
  <version>0.0.0</version>
  <description>The franka_simulation package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>franka_description</build_depend>
  <build_depend>franka_gazebo</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>franka_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>franka_description</build_export_depend>
  <build_export_depend>franka_gazebo</build_export_depend>
  <build_export_depend>franka_hw</build_export_depend>
  <build_export_depend>franka_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>franka_msgs</exec_depend>

  <export>
  </export>
</package>
